@@ -4,7 +4,6 @@ import com.dbobjekts.metadata.column.IsGeneratedPrimaryKey
 import com.dbobjekts.statement.insert.InsertBuilderBase
 import com.dbobjekts.statement.update.UpdateBuilderBase
 
-
 abstract class TableRowData<U : UpdateBuilderBase, I : InsertBuilderBase>(
     internal val writeAccessors: WriteQueryAccessors<U, I>
 ) {
